test(codegen): fix immutable list issue in GenericAwareJavaCodegenTest